--- a/OutlineViewer.NET/Views/MainPage.xaml
+++ b/OutlineViewer.NET/Views/MainPage.xaml
@@ -1,5 +1,5 @@
 ﻿<Page
-    x:Class="OutlineViewer.NET.MainPage"
+    x:Class="OutlineViewer.NET.Views.MainPage"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:local="using:OutlineViewer.NET"
@@ -10,22 +10,22 @@
     Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
 
     <RelativePanel MinWidth="600" MinHeight="400">
-        <MenuBar RelativePanel.AlignTopWithPanel="True">
+        <MenuBar x:Name="AppMenuBar" RelativePanel.AlignTopWithPanel="True">
             <MenuBarItem Title="File">
                 <MenuFlyoutItem Text="Load State"></MenuFlyoutItem>
                 <MenuFlyoutItem Text="Save State"></MenuFlyoutItem>
                 <MenuFlyoutSeparator />
-                <MenuFlyoutItem Text="Preferences"></MenuFlyoutItem>
+                <MenuFlyoutItem Text="Preferences" Click="ShowPreferences"></MenuFlyoutItem>
                 <MenuFlyoutItem Text="Exit"></MenuFlyoutItem>
             </MenuBarItem>
         </MenuBar>
-        <views:NetworkTableTree x:Name="TableTree" RelativePanel.AlignLeftWithPanel="True" RelativePanel.AlignRightWithPanel="True">
+        <views:NetworkTableTree x:Name="TableTree" RelativePanel.AlignLeftWithPanel="True" RelativePanel.Below="AppMenuBar">
             
         </views:NetworkTableTree >
 
-        <local:ConnectionControl x:Name="ConnectionBlock" RelativePanel.AlignBottomWithPanel="True" RelativePanel.AlignLeftWithPanel="True" RelativePanel.AlignRightWithPanel="True" Height="50">
+        <views:ConnectionControl Visibility="Collapsed" x:Name="ConnectionBlock" RelativePanel.AlignBottomWithPanel="True" RelativePanel.AlignLeftWithPanel="True" RelativePanel.AlignRightWithPanel="True" Height="50">
             
-        </local:ConnectionControl>
+        </views:ConnectionControl>
 
         <!--<Grid RelativePanel.AlignBottomWithPanel="True" RelativePanel.AlignLeftWithPanel="True" RelativePanel.AlignRightWithPanel="True" Height="50">
             <Rectangle x:Name="ConnectionBlock" Fill="Red" ></Rectangle>
